video link added

--- a/home-it-solutions2.html
+++ b/home-it-solutions2.html
@@ -774,7 +774,7 @@
                     <div class="col-lg-6">
                         <div class="img">
                             <img src="assets/img/choose_us/choose7.jpg" alt="">
-                            <a href="https://youtu.be/pGbIOC83-So?t=21" class="play_btn" data-lity>
+                            <a href="https://youtu.be/z7K2XsR7vAE" class="play_btn" data-lity>
                                 <i class="fas fa-play"></i>
                             </a>
                         </div>
