typeform link added

--- a/home-it-solutions2.html
+++ b/home-it-solutions2.html
@@ -172,7 +172,7 @@
                 </ul>
                 <div class="nav-side">
                     <div class="d-flex align-items-center">
-                        <a href="#" class="me-4">
+                        <a href="https://o0w8x9ro8ro.typeform.com/to/ka13gRan" class="me-4">
                            <span class="nav-link  contact-text">Contact</span>
                         </a>
                         
