--- a/home-it-solutions2.html
+++ b/home-it-solutions2.html
@@ -80,7 +80,7 @@
     <!-- ====== end sidemenu navbar ====== -->
     
     <!-- ====== start top navbar ====== -->
-    <div class="top-navbar style-7">
+    <!--<div class="top-navbar style-7">
         <div class="container">
             <div class="row justify-content-between gx-0">
                 <div class="col-7">
@@ -316,7 +316,7 @@
                     </div>
                 </div>
                 <div class="btns text-center mt-10">
-                    <a href="#0" class="btn btn-icon-circle rounded-pill bg-blue7 fw-bold text-white me-4 mb-4 mb-lg-0">
+                    <a href="https://o0w8x9ro8ro.typeform.com/to/ka13gRan" class="btn btn-icon-circle rounded-pill bg-blue7 fw-bold text-white me-4 mb-4 mb-lg-0">
                         <small> Contactez - nous <i class="fas fa-long-arrow-alt-right"></i> </small>
                     </a>
                     <a href="#0" class="btn btn-icon-circle rounded-pill bg-white fw-bold me-4">
@@ -1083,7 +1083,36 @@
                 </div>
             </div>
             <div class="foot bg-white p-3 rounded-pill text-center">
-                <p> Full Copyright & Design By <a href="#" class="fw-bold"> @ThemesCamp </a> - 2022 </p>
+                <div class="row justify-content-between gx-0">
+                    <div class="col-7">
+                        <div class="top_info">
+                            <a href="#" class="me-4"> 
+                                <i class="fas fa-envelope-open me-1 color-blue7"></i>
+                                <span>info@iteck-tech</span>    
+                            </a>
+                            <a href="#"> 
+                                <i class="fas fa-phone me-1 color-blue7"></i>
+                                <span>+237 691216119 </span>    
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-5">
+                        <div class="side_links d-flex justify-content-lg-end">
+                            <a href="#" class="me-4"> Careers </a>
+                            <a href="#" class="me-4"> Faq </a>
+                            <div class="dropdown border-1 border-start ps-4">
+                                <a class="dropdown-toggle fw-bold" href="#" id="navbarDropdown1" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    English
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                                    <li><a class="dropdown-item" href="#0"> Arabic </a></li>
+                                    <li><a class="dropdown-item" href="#0"> french </a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- <img src="assets/img/footer/footer_4_wave.png" alt="" class="wave"> -->
