--- a/home-it-solutions2.html
+++ b/home-it-solutions2.html
@@ -5,7 +5,7 @@
     <!-- Metas -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="keywords" content="HTML5 Template Iteck Multi-Purpose themeforest" />
     <meta name="description" content="Iteck - Multi-Purpose HTML5 Template" />
     <meta name="author" content="" />
@@ -44,12 +44,12 @@
 
     <!-- ====== start sidemenu navbar ====== -->
     <div class="side_menu style-7" id="side_menu">
-        <a href="#0" class="side_menu_cls">
+        <a href="#" class="side_menu_cls" aria-label="4dots">
             <img src="assets/img/icons/4dots.png" alt="">
         </a>
         <div class="content">
             <div class="logo">
-                <a href="#" class="w-100">
+                <a href="#" class="w-100" aria-label="GiftImg">
                     <img src="assets/img/header/GiftImg.png" alt="">
                 </a>
             </div>
@@ -119,7 +119,7 @@
     <!-- ====== start navbar ====== -->
     <nav class="navbar navbar-expand-lg navbar-light style-7">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="#" aria-label="GiftImg">
                 <img src="assets/img/header/GiftImg.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -164,7 +164,7 @@
                     </li>
                    
                     <li class="nav-item">
-                        <a class="nav-link" href="page-contact-app.html">
+                        <a class="nav-link" href="./teamInfo.html">
                             <!-- <img src="assets/img/icons/nav_icon/price.png" alt="" class="icon-15 me-1"> -->
                             Teams
                         </a>
@@ -176,7 +176,7 @@
                            <span class="nav-link  contact-text">Contact</span>
                         </a>
                         
-                        <a href="#0" class="side_menu_btn">
+                        <a href="#0" class="side_menu_btn" aria-label="4dots">
                             <img src="assets/img/icons/4dots.png" alt="">
                         </a>
                     </div>
@@ -190,7 +190,7 @@
     <header class="style-7">
         <div class="content">
             <div class="container">
-                <div class="row align-items-center" style="margin-top:25px;">
+                <div class="row align-items-center" >
                     <div class="col-lg-6">
                         <div class="info mt-5 mt-lg-0">
                             <div class="section-head style-4">
@@ -225,17 +225,17 @@
                                 Happy <br> <span class="fw-bold"> Sponsors </span>
                             </div>
                             <div class="sponsers-content">
-                                <a href="#">
-                                    <img src="assets/img/logos/18.png" alt="">
+                                <a href="#" aria-label="img">
+                                    <img src="assets/img/logos/18.png" aria-label="img" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/img/logos/19.png" alt="">
+                                    <img src="assets/img/logos/19.png" aria-label="img" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/img/logos/20.png" alt="">
+                                    <img src="assets/img/logos/20.png" aria-label="img" alt="">
                                 </a>
                                 <a href="#">
-                                    <img src="assets/img/logos/21.png" alt="">
+                                    <img src="assets/img/logos/21.png" aria-label="img" alt="">
                                 </a>
                             </div>
                         </div>
@@ -774,7 +774,7 @@
                     <div class="col-lg-6">
                         <div class="img">
                             <img src="assets/img/choose_us/choose7.jpg" alt="">
-                            <a href="https://youtu.be/z7K2XsR7vAE" class="play_btn" data-lity>
+                            <a href="https://youtu.be/z7K2XsR7vAE" aria-label="icon" class="play_btn" data-lity>
                                 <i class="fas fa-play"></i>
                             </a>
                         </div>
@@ -956,24 +956,24 @@
                 <div class="row">
                     <div class="col-lg-4 border-1 border-end brd-gray">
                         <div class="info-logo">
-                            <a href="#" class="logo">
+                            <a href="#" aria-label="GiftImg" class="logo">
                                 <img src="assets/img/header/GiftImg.jpeg" alt="">
                             </a>
                             <div class="text">
                                 Our highly skilled development teams specialized in Java, PHP, React, Angular and AWS help you accelarate.
                             </div>
                             <div class="social-links">
-                                <a href="#">
+                                <a href="#" aria-label="facebook-ico">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                                 <a href="#">
-                                    <i class="fab fa-twitter"></i>
+                                    <i class="fab fa-twitter" aria-label="Twitter"></i>
                                 </a>
                                 <a href="#">
-                                    <i class="fab fa-youtube"></i>
+                                    <i class="fab fa-youtube" aria-label="fa-youtube"></i>
                                 </a>
                                 <a href="#">
-                                    <i class="fab fa-linkedin-in"></i>
+                                    <i class="fab fa-linkedin-in" aria-label="fa-linkedin-in"></i>
                                 </a>
                             </div>
                         </div>
@@ -1120,7 +1120,7 @@
     <!-- ====== end footer ====== -->
 
     <!-- ====== start to top button ====== -->
-    <a href="#" class="to_top bg-gray rounded-circle icon-40 d-inline-flex align-items-center justify-content-center">
+    <a href="#" aria-label="bi-chevron-up" class="to_top bg-gray rounded-circle icon-40 d-inline-flex align-items-center justify-content-center">
         <i class="bi bi-chevron-up fs-6 text-dark"></i>
     </a>
     <!-- ====== end to top button ====== -->
