--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content">
             <div class="logo">
                 <a href="#" class="w-100" aria-label="GiftImg">
-                    <img src="assets/img/header/GiftImg.png" alt="">
+                    <img src="assets/img/header/Logo.png" alt="">
                 </a>
             </div>
             <div class="pages_links">
@@ -120,7 +120,7 @@
     <nav class="navbar navbar-expand-lg navbar-light style-7">
         <div class="container">
             <a class="navbar-brand" href="#" aria-label="GiftImg">
-                <img src="assets/img/header/GiftImg.png" alt="">
+                <img src="assets/img/header/Logo.png" alt="">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -195,11 +195,11 @@
                             <div class="section-head style-4">
                                 <div class="top-title">
                                     <!--    <img src="assets/img/line_l.png" alt=""> -->
-                                    <h5> Get Solid Solution </h5>
+                            
                                 </div>
                             </div>
                             <h1 class="text-grade-h1-style">
-                                Make <br> <span class="num"> GIFT </span> <span class="text-grad"> Hard Things </span>
+                                GIFT <br> <span class="num"> Make  </span> <span class="text-grad"> Hard Things </span>
                                 <br> Soft
                             </h1>
                             <div class="d-flex flex-wrap">
@@ -217,7 +217,6 @@
                     <div class="col-lg-6">
                         <div class="img mt-4 mt-lg-0">
                             <img src="assets/img/image-web.png" alt="">
-                            <img src="assets/img/header/giftG.png" width="150" alt="" class="rock7 slide_up_down">
                         </div>
                     </div>
                     <div class="col-12">
